quiz app result

--- a/Quiz App Proper/HTML/htmlquiz.html
+++ b/Quiz App Proper/HTML/htmlquiz.html
@@ -11,6 +11,10 @@
 
 <body onload="show()">
 
+    <div id="result">
+
+    </div>
+
     <div id="container" class="container">
 
         <div class="header">
@@ -36,7 +40,7 @@
         </div>
 
         <div id="footer" class="footer">
-            <p> 1 of 10 Questions </p>
+            <p id="questionDetail"> 1 of 10 Questions </p>
             <a href="#" onclick="next()" id="nextBtn"> <button> Next </button> </a>
         </div>
 
